crates/pi/src/modes/interactive/snapshots/pi__modes__interactive__tests__custom_branch_skill_messages.snap
---
source: crates/pi/src/modes/interactive/tests.rs
expression: triple_plain(&state)
---
===== width 20 =====
  pi v0.1.0  •      
  type a message    
  to begin          
                    
│ [note]            
│ Extension-injected
│ context           
                    
│ ↶ Branch summary  
│ (from abc123)     
│ Returned from an  
│ experimental      
│ branch.           
                    
│ [skill:commit]    
│ Invoked commit    
│ skill             
                    
 ❯ Type a message…  
~/projects/pi (main)
• refactor          
1.2k in · 567 out · 
$0.012 · 42% of 200k
(auto)              
claude-sonnet •     
medium              
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    

===== width 80 =====
  pi v0.1.0  •  type a message to begin                                         
                                                                                
│ [note]                                                                        
│ Extension-injected context                                                    
                                                                                
│ ↶ Branch summary (from abc123)                                                
│ Returned from an experimental branch.                                         
                                                                                
│ [skill:commit]                                                                
│ Invoked commit skill                                                          
                                                                                
 ❯ Type a message…                                                              
~/projects/pi (main) • refactor                                                 
1.2k in · 567 out · $0.012 · 42% of 200k (auto)           claude-sonnet • medium
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                

===== width 160 =====
  pi v0.1.0  •  type a message to begin                                                                                                                         
                                                                                                                                                                
│ [note]                                                                                                                                                        
│ Extension-injected context                                                                                                                                    
                                                                                                                                                                
│ ↶ Branch summary (from abc123)                                                                                                                                
│ Returned from an experimental branch.                                                                                                                         
                                                                                                                                                                
│ [skill:commit]                                                                                                                                                
│ Invoked commit skill                                                                                                                                          
                                                                                                                                                                
 ❯ Type a message…                                                                                                                                              
~/projects/pi (main) • refactor                                                                                                                                 
1.2k in · 567 out · $0.012 · 42% of 200k (auto)           claude-sonnet • medium
